--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,7 @@ services:
       - ./frontend:/app
       - /app/node_modules
     environment:
-      - API_URL=http://localhost:8000
+      - VITE_API_URL=http://aispanish-backend:8000
     depends_on:
       - backend
 
