--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,9 +1,9 @@
-fastapi==0.109.0
-uvicorn==0.27.0
-pydantic==2.5.3
-python-dotenv==1.0.0
-motor==3.3.2
-pymongo==4.6.1
+fastapi
+uvicorn
+pydantic
+python-dotenv
+motor
+pymongo
 openai
 jinja2
 anthropic
