get keycloak working

--- a/local_deployment/Dockerfile.frontend
+++ b/local_deployment/Dockerfile.frontend
@@ -2,11 +2,11 @@ FROM node:lts-bookworm-slim
 
 WORKDIR /app
 
-COPY frontend/package*.json ./
+COPY package*.json ./
 
 RUN npm install
 
-COPY frontend/ .
+COPY . .
 
 EXPOSE 5173
 
