--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,9 @@
     "preview": "./node_modules/.bin/vite preview"
   },
   "dependencies": {
+    "@react-keycloak/web": "^3.4.0",
     "axios": "^1.7.9",
+    "keycloak-js": "^26.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
